# numru

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
benches/: max_benchmarks.rs
examples/: array.rs  example.rs  max.rs  mean.rs  min.rs  ones.rs  zeros.rs
resources/: README.md  numru.fig
src/: array.rs  axis.rs  dimension.rs  errors.rs  ix.rs  lib.rs  macros.rs  nr.rs  operations.rs  shape.rs  visualization.rs
