[package]
name = "numru"
version = "0.1.0"
edition = "2021"
authors = ["ḵuro <x40151@proton.me>"]
description = "A high-performance scientific computation library written in Rust."
license = "MIT"
documentation = "https://docs.rs/numru/latest/numru/"
repository = "https://github.com/kur08/numru"
readme = "../README.md"
rust-version = "1.83.0"
homepage = "https://github.com/kur08/numru"
keywords = [
    "scientific",
    "computation",
    "numerical",
    "math",
    "tensor",
    "array",
    "matrix",
    "linear-algebra",
    "statistics",
    "data-science",
    "machine-learning",
    "physics",
    "simulation",
    "engineering",
    "finance",
    "bioinformatics",
    "numpy",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
