[package]
name = "numru"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = "A high-performance scientific computation library written in Rust."
license = "MIT"
documentation = "https://docs.rs/numru/latest/numru/"
repository = "https://github.com/mjovanc/numru"
readme = "README.md"
rust-version = "1.83.0"
homepage = "https://github.com/mjovanc/numru"
keywords = ["scientific", "computation", "numerical", "math", "array"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
thiserror = "2"

[[example]]
name = "array"
path = "examples/array.rs"

[[example]]
name = "max"
path = "examples/max.rs"

[[example]]
name = "min"
path = "examples/min.rs"
